syntax = "proto3";

package core;

option go_package = "p9t.io/kuberboat/pkg/proto";

message Label {
  string name = 1;
  string value = 2;
}

message Pod {
  string name = 1;
  repeated Label labels = 2;
  repeated Container containers = 3;
  repeated string volumes = 4;
}

message Container {
  string name = 1;
  string image = 2;
  uint32 ports = 3;
  repeated ResourceRequirement resource_requirements = 4;
  repeated string command = 5;
  repeated VolumeMount volume_mounts = 6;
}

message ResourceRequirement {
  string resource = 1;
  uint32 requirement = 2;
}

message VolumeMount {
  string name = 1;
  string mount_path = 2;
}

message Node {
  
}